--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,14 @@ jobs:
        - name: Build image
          run: docker build -t registry.digitalocean.com/test-deploy-container/carcompanies:$(echo $GITHUB_SHA | head -c7) .
 
+       - name: Instal doctl
+         uses: digitalocean/action-doctl@v2
+         with:
+            token:${{ secrets.DIGITALOCEAN_TOKEN }}
+
+       - name: Login docker
+         run: doctl registry login --expiry-seconds 600 
+        
+       - name: Push Image
+         run: docker push registry.digitalocean.com/test-deploy-container/carcompanies:$(echo $GITHUB_SHA | head -c7)
+
