--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,11 +40,17 @@ jobs:
        - name: Instal doctl
          uses: digitalocean/action-doctl@v2
          with:
-            token: ${{ secrets.DIGITALOCEAN_TOKEN }}
+          token: ${{ secrets.DIGITALOCEAN_TOKEN }}
 
        - name: Login docker
          run: doctl registry login --expiry-seconds 600 
         
        - name: Push Image
          run: docker push registry.digitalocean.com/test-deploy-container/carcompanies:$(echo $GITHUB_SHA | head -c7)
+
+       - name: Update deploy file
+         run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/test-deploy-container/carcompanies:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+
+       - name: save config cluster
+         run: doctl kubernets cluster kubeconfig save --expiry-seconds 600 k8s-1-28-test
 
