git push modified

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,6 @@
-http {
-    upstream api {
-        server car-companie-deployment:5000;  
-    }
-
     server {
-        listen 80;
-        server_name localhost;  # 
+        listen 5000;
+        server_name localhost;   
 
         location / {
             proxy_pass http://api;
@@ -13,10 +8,4 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        location /api {
-            proxy_pass http://api;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
     }
-}
