--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,7 @@
         server_name localhost;   
 
         location / {
-            proxy_pass http://api;
+            proxy_pass car-companie-deployment:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
