--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,10 @@
-    server {
-        listen 5000;
-        server_name localhost;   
+server {
+    listen 5000;
+    server_name localhost;
 
-        location / {
-            proxy_pass car-companie-deployment:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
+    location / {
+        proxy_pass http://car-companie-deployment; 
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
+}
