--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,11 +1,14 @@
-
-
 server {
     listen 5000;
     server_name localhost;
 
+    # Inclua a diretiva events localmente
+    events {
+        worker_connections 4096;  # Ajuste o valor conforme necessário
+    }
+
     location / {
-        proxy_pass http://car-companie-deployment; 
+        proxy_pass http://car-companie-deployment;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
