--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,14 +1,24 @@
+worker_processes auto;  
+
 events {
-        worker_connections 4096;  # Ajuste o valor conforme necessário
-    }
+    worker_connections 9046;  
+}
 
-server {
-    listen 5000;
-    server_name localhost;   
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    location / {
-        proxy_pass http://car-companie-deployment;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    sendfile on;
+    keepalive_timeout 65;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            proxy_pass http://car-companie-deployment;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
