--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,10 @@
-worker_processes auto;  
+server {
+    listen 5000;
+    server_name localhost;
 
-events {
-    worker_connections 9046;  
+    location / {
+        proxy_pass http://car-companie-deployment;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
-
