--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -38,18 +38,19 @@ spec:
 
 ---
 
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
- name: car-companie-deployment
- labels:
-    app: car-companie-deployment
+  name: car-companie-ingress
 spec:
-  type: LoadBalancer
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 5000
-  selector:
-    app: car-companie-deployment
+  rules:
+    - host:  
+      http:
+        paths:
+          - pathType: Prefix
+            path: /  
+            backend:
+              service:
+                name: car-companie-deployment
+                port:
+                  number: 80
