--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -1,68 +1,21 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Deployment
-
 metadata:
- name: car-companie-deployment
- labels:
-    app: car-companie-deployment
-
+   name: carcompanies-deployment
+   labels:
+      app: carcompanies-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
-    matchLabels:
-      app: car-companie-deployment
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-  minReadySeconds: 5
+     matchLabels:
+         app: carcompanies-deployment
   template:
       metadata:
-        labels:
-          app: car-companie-deployment
+         labels:
+           app: carcompanies-deployment
       spec:
         containers:
-          - name: test-deploy-container
-            image: <IMAGE>
-            securityContext:
-              privileged: true
-            ports:
-              - name: http
-                containerPort: 80
-                hostPort: 80
-            resources:
-              requests:
-                cpu: 100m
-              limits:
-                cpu: 1000m
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: car-companie-deployment
-spec:
-  selector:
-     app: car-companie-deployment
-  ports:
-    - port: 80
-      targetPort: 5000
-  type: ClusterIP
-
----
-apiVersion: v1
-kind: Service
-metadata:
- name: car-companie-deployment
- labels:
-    app: car-companie-deployment
-spec:
-  type: LoadBalancer
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 5000
-  selector:
-    app: car-companie-deployment
+        - name: carcompanies-deployment
+          image: <IMAGE>
+          ports:
+           - containerPort: 443
