--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -19,3 +19,19 @@ spec:
           image: <IMAGE>
           ports:
            - containerPort: 443
+
+---
+apiVersion: v1
+kind: Service
+metadata: 
+  name: carcompanies-deployment
+  labels:
+    app: carcompanies-deployment
+spec:
+  type: ClusterIP
+  ports:
+  - port: 443
+    targetPort: 443
+  selector: 
+     app: carcompanies-deployment
+     
