--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -28,7 +28,7 @@ metadata:
   labels:
     app: carcompanies-deployment
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: 80
