--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -28,27 +28,27 @@ metadata:
   labels:
     app: carcompanies-deployment
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 30000
   selector: 
      app: carcompanies-deployment
 
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: carcompanies-ingress
-# spec:
-#   rules:
-#   - host: api.carcompaniew.com
-#     http:
-#       paths:
-#       - path: /
-#         pathType: Prefix
-#         backend:
-#           service:
-#             name: carcompanies-deployment
-#             port:
-#               number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: carcompanies-ingress
+spec:
+  rules:
+  - host: api.carcompaniew.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: carcompanies-deployment
+            port:
+              number: 80
