--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: carcompanies-deployment
+  name: carcompanies-service
 spec:
   selector:
     app: carcompanies-deployment
@@ -33,5 +33,33 @@ spec:
       port: 80
       targetPort: 30000
 
-
-
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: carcompanies-ingress
+spec:
+  rules:
+    - host: my.carcompanie.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: carcompanies-service
+                port:
+                  number: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: carcompanies-loadbalancer
+spec:
+  selector:
+    app: carcompanies-deployment
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 30000
+  type: LoadBalancer
