--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -31,7 +31,7 @@ spec:
   - port: 80
     targetPort: 80
   selector:
-    app: carcompanies-deploymen
+    app: carcompanies-deployment
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
