--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -36,7 +36,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: hello-kubernetes-ingress
+  name: carcompanies-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
