--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -36,12 +36,12 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: carcompanies-ingress
+  name: carcompanies-ingresss
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-  - host: carcompanies-deployment   
+  - host: carcompanies-deployment.com
     http:
       paths:
       - pathType: Prefix
