--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -32,4 +32,16 @@ spec:
     targetPort: 80
   selector:
     app: carcompanies-deployment
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: carcompanies-loadbalancer
+spec:
+  selector:
+    app: carcompanies-deployment
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
