--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -40,7 +40,7 @@ metadata:
 spec:
   selector:
     app: carcompanies-deployment
-  ports:
+  ports: 443
     - protocol: TCP
       port: 80
       targetPort: 80
