--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -33,15 +33,21 @@ spec:
   selector:
     app: carcompanies-deployment
 ---
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: carcompanies-loadbalancer
+  name: carcompanies-ingresss
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
-  selector:
-    app: carcompanies-deployment
-   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
+  rules:
+  - host: carcompanies-deployment.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: carcompanies-deployment
+            port:
+              number: 80
