--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -39,9 +39,11 @@ metadata:
   name: carcompanies-ingresss
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: "letsencrypt"
+    ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   rules:
-  - host: carcompanies-deployment.com
+  - host: k8s.simplewebapi.shop
     http:
       paths:
       - pathType: Prefix
@@ -51,3 +53,21 @@ spec:
             name: carcompanies-deployment
             port:
               number: 80
+
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+
+metadata:
+    name: letssencrypt
+
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email:  paulosantos1799@outlook.com
+    privateKeySecretRef:
+      name: letsencrypt-tls
+    solvers:
+     -http01:
+        ingress:
+           class: nginx
