--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -53,21 +53,25 @@ spec:
             name: carcompanies-deployment
             port:
               number: 80
+tls:
+  - hosts:
+    - "k8s.simplewebapi.shop"
+    secretName: letsencrypt-tls              
 
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 
 metadata:
-    name: letssencrypt
+  name: letsencrypt
 
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email:  paulosantos1799@outlook.com
+    email: paulosantos1799@outlook.com
     privateKeySecretRef:
       name: letsencrypt-tls
     solvers:
-     -http01:
+    - http01:
         ingress:
-           class: nginx
+          class: nginx
