--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -33,7 +33,7 @@ spec:
   selector:
     app: carcompanies-deployment
 ---
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: carcompanies-ingresss
