--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -58,3 +58,21 @@ spec:
     - "k8s.simplewebapi.shop"
     secretName: letsencrypt-tls
          
+---
+
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+
+metadata:
+  name: letsencrypt
+
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: paulosantos1799@outlook.com
+    privateKeySecretRef:
+      name: letsencrypt-tls
+    solvers:
+    - http01:
+        ingress:
+          class: nginx
